--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-11 [飓风米尔顿造成至少16人丧生，300多万人无电可用](/articles/voa/1011881.md)
+
 10-11 [欧洲理事会主席称中国必须“调整其行为”以解决贸易争端](/articles/voa/1011882.md)
 
 10-11 [布林肯告诉东盟：美国担忧中国在争议海域的“危险”行动](/articles/voa/1011883.md)
@@ -598,6 +600,4 @@
 9-30 [投资者害怕“错过车”，中国股市周一疯涨，创2008年来单日最大涨幅](/articles/voa/1012179.md)
 
 9-30 [拜登批准向台湾提供5.67亿美元军援，北京批美“严重违反”一中原则](/articles/voa/1012180.md)
-
-9-30 [中共建政75年 分析：习近平影响力仍存，国內外挑战恐加剧](/articles/voa/1012181.md)
 
