--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+10-11 [联合国驻黎巴嫩部队遭以军袭击 – 各方如何回应？](/articles/dw/1024034.md)
+
+10-11 [马来西亚榴莲热: 中国开放进口引爆销售热潮](/articles/dw/1024035.md)
+
+10-11 [肖尔茨会晤泽连斯基 德国同伙伴一道再增援14亿欧元](/articles/dw/1024036.md)
+
 10-11 [欧盟就“非法产品销售“问题向Temu提出问询](/articles/dw/1024037.md)
 
 10-11 [中国和越南将签署更多新协议](/articles/dw/1024038.md)
@@ -594,10 +600,4 @@
 9-10 [0比7之后 中国足球界开始新一轮整肃](/articles/dw/1024332.md)
 
 9-10 [德国大众30年来未有：员工金饭碗不再](/articles/dw/1024333.md)
-
-9-10 [客座评论：电动车关税 中欧“最后冲刺”结果如何？](/articles/dw/1024334.md)
-
-9-10 [中国为何要叫停涉外收养？](/articles/dw/1024335.md)
-
-9-10 [金正恩誓言要和美国打核战争](/articles/dw/1024336.md)
 
