--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-12 [美两党议员要求电信公司汇报中国黑客入侵事件](/articles/voa/1011868.md)
+
 10-12 [美国总统大选愈加扑朔迷离，什么样的“十月惊奇”会搅局选情？](/articles/voa/1011869.md)
 
 10-12 [欧盟怀疑中国跨境电商平台Temu阻止非法商品出售不力，要求其提供更多资料](/articles/voa/1011870.md)
@@ -598,6 +600,4 @@
 10-1 [分析人士：升级的冲突考验中国的中东政策](/articles/voa/1012166.md)
 
 10-1 [拜登行政当局将延长美墨边境的庇护禁令](/articles/voa/1012167.md)
-
-10-1 [美国副总统候选人辩论周二登场 万斯和沃尔兹如何看中国？](/articles/voa/1012168.md)
 
