--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-12 [一名香港女子对企图从美国向加拿大跨湖走私东部箱龟的指控认罪](/articles/voa/1011862.md)
+
 10-12 [一名美军士兵因企图协助“伊斯兰国”而被判处14年监禁](/articles/voa/1011863.md)
 
 10-12 [消息人士：中国与越南将签署铁路和农业协议](/articles/voa/1011864.md)
@@ -598,6 +600,4 @@
 10-1 [以色列开始对黎巴嫩南部真主党目标进行有限地面行动](/articles/voa/1012160.md)
 
 10-1 [受损的北卡罗来纳州有数百人在海伦飓风过后依然失踪](/articles/voa/1012161.md)
-
-10-1 [前总统卡特迎来百岁大寿，其政治遗产获重新评价](/articles/voa/1012162.md)
 
