--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-12 [以色列袭击致两名联合国驻黎巴嫩维和人员受伤](/articles/voa/1011860.md)
+
 10-12 [中国称富士康郑州厂4名台干因涉嫌受贿罪等正接受调查](/articles/voa/1011861.md)
 
 10-12 [一名香港女子对企图从美国向加拿大跨湖走私东部箱龟的指控认罪](/articles/voa/1011862.md)
@@ -598,6 +600,4 @@
 10-1 [4.5万美国码头工人预计午夜开始罢工](/articles/voa/1012158.md)
 
 10-1 [原声带·前解放军中尉高峰：亲历中国核试验秘密](/articles/voa/1012159.md)
-
-10-1 [以色列开始对黎巴嫩南部真主党目标进行有限地面行动](/articles/voa/1012160.md)
 
