--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-12 [波音公司计划裁员10%，预计第三季度大幅亏损](/articles/voa/1011856.md)
+
 10-12 [卫报：英国担忧惹怒中国 推迟了台湾前总统蔡英文的访问](/articles/voa/1011857.md)
 
 10-12 [中国为疲软经济提供2.3万亿人民币财政刺激](/articles/voa/1011858.md)
@@ -598,6 +600,4 @@
 10-1 [上海超市持刀袭击事件致3死15伤](/articles/voa/1012154.md)
 
 10-1 [韩国国军日阅兵活动登场 朝鲜谴责美国部署核战略武器](/articles/voa/1012155.md)
-
-10-1 [欧盟推迟对华电动汽车关税表决，内部利益博弈引发妥协预期](/articles/voa/1012156.md)
 
