--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-13 [以色列轰炸加沙北部，联合国驻黎巴嫩维和部队再次遭到攻击](/articles/voa/1011850.md)
+
 10-13 [北京警告欧盟不要单独与中国车企谈判，否则会动摇双边“谈判基础”](/articles/voa/1011851.md)
 
 10-12 [对赖清德双十演说深感不满，北京威胁对台采取贸易措施](/articles/voa/1011852.md)
@@ -598,6 +600,4 @@
 10-1 [中国洋媳妇杨思安：中国改开只是演给外商的一场戏](/articles/voa/1012148.md)
 
 10-1 [新疆民族忠诚干部 恐成北京镇压目标？](/articles/voa/1012149.md)
-
-10-1 [石破茂获选为日本新首相 10月底提前举办国会大选](/articles/voa/1012150.md)
 
