--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-13 [以色列下令更多的黎巴嫩南部城镇居民撤离](/articles/voa/1011847.md)
+
 10-13 [香港贫富差距扩大 政府纾困沦为死局](/articles/voa/1011848.md)
 
 10-13 [四通桥事件两周年 海外持续声援，呼吁中共释放彭立发](/articles/voa/1011849.md)
@@ -598,6 +600,4 @@
 10-1 [中国官媒：美中商务部长即将通话，讨论双边经贸关系](/articles/voa/1012145.md)
 
 10-1 [北约新秘书长：中国是俄对乌战争决定性助推者，而挺俄应有后果](/articles/voa/1012146.md)
-
-10-1 [“没有国庆，只有国殇”在美华裔民主人权团体以及多族裔集会为中共“送葬”](/articles/voa/1012147.md)
 
