--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-13 [中国海军辽宁号航母进入巴士海峡，台湾军方“严密掌控相关动态”](/articles/voa/1011837.md)
+
 10-13 [美国学者在中国做研究限制加大 忧未来美中认知失衡](/articles/voa/1011838.md)
 
 10-13 [中国9月通缩压力加剧 消费通胀放缓](/articles/voa/1011839.md)
@@ -598,6 +600,4 @@
 10-2 [无法忘却的病毒，新冠病毒从何而来依然令世界关注](/articles/voa/1012135.md)
 
 10-2 [伊朗向以色列发射数十枚导弹](/articles/voa/1012136.md)
-
-10-2 [中非共和国与中国关系恶化的背后—采矿业冲突与安全挑战加剧](/articles/voa/1012137.md)
 
