--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-14 [建设性意见｜明天哪只股票会涨？](/articles/cdt/336393.md)
+
 10-14 [老干体v｜地方债，终究还是中央扛下了所有](/articles/cdt/336397.md)
 
 10-14 [木蹊说｜鲁镇爷叔](/articles/cdt/336399.md)
@@ -598,6 +600,4 @@
 9-7 [忘川边的但丁｜国足这0比7，让我想起李鸿章的“看足球之问”](/articles/cdt/337337.md)
 
 9-7 [新新默存｜王五四：有一种苦，叫中国男足](/articles/cdt/337340.md)
-
-9-7 [每日一语 2024.9.6](/articles/cdt/337345.md)
 
