--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 10-14 [老干体v｜地方债，终究还是中央扛下了所有](/articles/cdt/336397.md)
 
+10-14 [老鱼时评｜任泽平为啥开始吃“爱国饭”了](/articles/cdt/336398.md)
+
 10-14 [木蹊说｜鲁镇爷叔](/articles/cdt/336399.md)
 
 10-13 [张3丰的世界｜80年代的“美好”，也不是天赐的](/articles/cdt/336402.md)
@@ -598,6 +600,4 @@
 9-7 [剑客写字的地方｜底层互害，越来越魔幻了](/articles/cdt/337330.md)
 
 9-7 [忘川边的但丁｜国足这0比7，让我想起李鸿章的“看足球之问”](/articles/cdt/337337.md)
-
-9-7 [新新默存｜王五四：有一种苦，叫中国男足](/articles/cdt/337340.md)
 
