--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-14 [澳大利亚全球通缉恶意烫伤婴儿的中国公民](/articles/voa/1011833.md)
+
+10-14 [中巴经济走廊恐怖袭击不断 中国试图加强安全保障](/articles/voa/1011834.md)
+
 10-13 [李强访越，两国同意降低南中国海冲突紧张局势](/articles/voa/1011835.md)
 
 10-13 [东盟呼吁早日签署《南中国海行为准则》并结束缅甸内部军事冲突](/articles/voa/1011836.md)
@@ -596,8 +600,4 @@
 10-2 [北约新任秘书长将支持乌克兰列为优先要务，表示将与任何美国总统合作](/articles/voa/1012131.md)
 
 10-2 [伊朗对以色列进行了大规模导弹袭击，空袭警报已解除，尚未报告有人员伤亡](/articles/voa/1012132.md)
-
-10-2 [新首相石破茂：日本周边的安全环境是二战以来最严峻的](/articles/voa/1012133.md)
-
-10-2 [以色列警方：特拉维夫发生枪击事件并造成多人伤亡](/articles/voa/1012134.md)
 
