--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-14 [乌克兰新闻界悼念在俄罗斯拘留期间死亡的乌克兰记者](/articles/voa/1011832.md)
+
 10-14 [澳大利亚全球通缉恶意烫伤婴儿的中国公民](/articles/voa/1011833.md)
 
 10-14 [中巴经济走廊恐怖袭击不断 中国试图加强安全保障](/articles/voa/1011834.md)
@@ -598,6 +600,4 @@
 10-2 [以色列遭遇哈马斯恐袭一周年行将到来，欧洲国家强化呼吁停战力度](/articles/voa/1012130.md)
 
 10-2 [北约新任秘书长将支持乌克兰列为优先要务，表示将与任何美国总统合作](/articles/voa/1012131.md)
-
-10-2 [伊朗对以色列进行了大规模导弹袭击，空袭警报已解除，尚未报告有人员伤亡](/articles/voa/1012132.md)
 
