--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-14 [拜登总统视察佛罗里达州米尔顿飓风灾情](/articles/voa/1011831.md)
+
 10-14 [乌克兰新闻界悼念在俄罗斯拘留期间死亡的乌克兰记者](/articles/voa/1011832.md)
 
 10-14 [澳大利亚全球通缉恶意烫伤婴儿的中国公民](/articles/voa/1011833.md)
@@ -598,6 +600,4 @@
 10-2 [中国民运团体在白宫前抗议中共 呼吁美国制裁中国](/articles/voa/1012129.md)
 
 10-2 [以色列遭遇哈马斯恐袭一周年行将到来，欧洲国家强化呼吁停战力度](/articles/voa/1012130.md)
-
-10-2 [北约新任秘书长将支持乌克兰列为优先要务，表示将与任何美国总统合作](/articles/voa/1012131.md)
 
