--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-14 [中国将出台财政刺激措施：发行债券、向银行注资](/articles/nyt/1042315.md)
+
 10-11 [男人并不需要“正面男子气概”](/articles/nyt/1042316.md)
 
 10-11 [诺奖获奖作家韩江：“直面历史创伤，揭露人类生命的脆弱”](/articles/nyt/1042317.md)
@@ -598,6 +600,4 @@
 7-4 [中俄是如何在中亚既竞争又合作的](/articles/nyt/1042613.md)
 
 7-4 [中国全面审查游泳禁药丑闻，为何沉默而非反击？](/articles/nyt/1042614.md)
-
-7-4 [美国的领导人危机是给习近平和普京的大礼](/articles/nyt/1042615.md)
 
