--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-14 [特朗普在亚利桑那州承诺增加1万名边境巡逻人员](/articles/voa/1011827.md)
+
 10-14 [美国将向以色列提供先进导弹防御系统](/articles/voa/1011828.md)
 
 10-14 [中国在台湾附近开始新一轮军演，未确定结束日期](/articles/voa/1011829.md)
@@ -598,6 +600,4 @@
 10-2 [中共建政周年日之际，印度藏人团体抗议中国政府和西藏人权状况](/articles/voa/1012125.md)
 
 10-2 [国际危机组织：美大选增不确定性，台北与北京应立即采取降温行动保留未来管理紧张局势的操作空间](/articles/voa/1012126.md)
-
-10-2 [前班班市长郭华萍被指控是中国间谍后，菲律宾防长促修订间谍法](/articles/voa/1012127.md)
 
