--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-23 [国际舆论评论金砖峰会：从单极世界向多极化发展](/articles/dw/1023918.md)
+
 10-23 [芬兰特产毒蘑菇](/articles/dw/1023919.md)
 
 10-23 [网上“晒娃” 这些NG行为先不要](/articles/dw/1023920.md)
@@ -598,6 +600,4 @@
 9-23 [信奉马克思主义的迪萨纳亚克就任斯里兰卡总统](/articles/dw/1024216.md)
 
 9-23 [美国拟全面禁止联网汽车使用中国软硬件](/articles/dw/1024217.md)
-
-9-23 [中国欲反制欧盟奶制品 布鲁塞尔诉诸WTO](/articles/dw/1024218.md)
 
