--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-24 [金正恩视察战略导弹基地，称以“战略威慑”应对美“核威胁”](/articles/voa/1011588.md)
+
 10-23 [印中峰会在中断五年后恢复，两国关系正常化迈出第一步](/articles/voa/1011589.md)
 
 10-23 [韩国情报机构证实三千朝鲜士兵已在俄受训，将部署到乌战场](/articles/voa/1011590.md)
@@ -598,6 +600,4 @@
 10-11 [中国总理李强与日本首相石破茂在东盟峰会期间举行会晤](/articles/voa/1011886.md)
 
 10-11 [美司法部对一名进口中国太阳能电池板却逃避支付高额关税的男子提起诉讼](/articles/voa/1011887.md)
-
-10-11 [赖清德双十讲话将引来中国军演？美国敦促中国克制](/articles/voa/1011888.md)
 
