--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-24 [中国“短剧出海”来势汹汹 美加欧澳演员粉墨登场](/articles/voa/1011585.md)
+
+10-24 [香港将再度举办国际金融领袖投资峰会，各国金融领袖关注中国经济局势](/articles/voa/1011586.md)
+
 10-24 [德国总理朔尔茨率团访印，期望扩大印度市场降低中国风险](/articles/voa/1011587.md)
 
 10-24 [金正恩视察战略导弹基地，称以“战略威慑”应对美“核威胁”](/articles/voa/1011588.md)
@@ -596,8 +600,4 @@
 10-11 [布林肯告诉东盟：美国担忧中国在争议海域的“危险”行动](/articles/voa/1011883.md)
 
 10-11 [上合组织峰会前夕，巴基斯坦发生袭击事件，至少20名矿工死亡](/articles/voa/1011884.md)
-
-10-11 [墨西哥石油公司德州炼油厂泄漏事故致2人死亡，35人受伤](/articles/voa/1011885.md)
-
-10-11 [中国总理李强与日本首相石破茂在东盟峰会期间举行会晤](/articles/voa/1011886.md)
 
