--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -11,6 +11,8 @@
 
 10-23 [竹不倒｜彻底不在乎吃相了？普通人老百姓瑟瑟发抖](/articles/cdt/336166.md)
 
+10-24 [【404文库】“欠薪问题一直是一个顽疾，为什么总是解决不了这个问题？”（外二篇）](/articles/cdt/336171.md)
+
 10-23 [念个咒语会下雨｜普信男无法容忍杨笠的冒犯，却可以接受刘强东性侵](/articles/cdt/336175.md)
 
 10-23 [【立此存照、404文库】｜公安局原副局长涉黑恶犯罪，妻子、姐姐同为犯罪集团头目，警方征集线索最高奖10万](/articles/cdt/336176.md)
@@ -598,6 +600,4 @@
 9-16 [每日一语 2024.9.15](/articles/cdt/337081.md)
 
 9-16 [【CDT报告汇】上海美国商会：会员公司盈利创历史新低，对中国市场预期悲观（外二篇）](/articles/cdt/337091.md)
-
-9-17 [【404媒体】“要是所有的媒体都能够追寻并披露真实的真相，又何需自媒体来写‘故事’ 呢？”(外二篇）](/articles/cdt/337092.md)
 
