--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-24 [七国集团将以俄罗斯冻结资产援助乌克兰](/articles/voa/1011580.md)
+
+10-24 [台湾强化应对中国围岛作战能力](/articles/voa/1011581.md)
+
 10-24 [布林肯：在哈马斯领导人死亡后，有“真正的机会”达成释放人质的协议](/articles/voa/1011582.md)
 
 10-24 [中国的大型投资项目是津巴布韦的经济希望还是环境噩梦？](/articles/voa/1011583.md)
@@ -596,8 +600,4 @@
 10-11 [南中国海紧张局势升级给全球贸易带来风险](/articles/voa/1011878.md)
 
 10-11 [中国国庆档电影缺爆款，票房回暖乏力、消费卷补贴也难救](/articles/voa/1011879.md)
-
-10-11 [中共立法将两岸历史记忆具体化 分析:文化“祖国”应被拆解](/articles/voa/1011880.md)
-
-10-11 [飓风米尔顿造成至少16人丧生，300多万人无电可用](/articles/voa/1011881.md)
 
