--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-24 [关于朝鲜军队出现在俄罗斯，我们所知道的](/articles/nyt/1042283.md)
+
 10-23 [碧桂园森林城市：中国房市崩盘与一座马来西亚空城](/articles/nyt/1042284.md)
 
 10-23 [耶伦呼吁加快全球债务减免，批评中国放贷“不透明”](/articles/nyt/1042285.md)
@@ -598,6 +600,4 @@
 7-15 [关于行刺特朗普的枪手，我们目前所知的](/articles/nyt/1042581.md)
 
 7-15 [在美国的动荡时刻，特朗普遇刺搅动选战](/articles/nyt/1042582.md)
-
-7-15 [中国6月贸易顺差创新高，引发多国警惕](/articles/nyt/1042583.md)
 
