--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-24 [《喀山宣言》反单边制裁  欧盟批普京滥用金砖](/articles/dw/1023911.md)
+
 10-24 [微軟：中國用網軍干預美選 針對反中候選人](/articles/dw/1023912.md)
 
 10-23 [习近平与莫迪会谈：妥处矛盾分歧](/articles/dw/1023913.md)
@@ -598,6 +600,4 @@
 9-24 [中国央行降息降准 欲拉动经济增长](/articles/dw/1024209.md)
 
 9-24 [“汽车峰会”后 德经济部长许诺扶持电动车业务](/articles/dw/1024210.md)
-
-9-24 [王文涛访欧后 中欧电动汽车关税争议有何进展？](/articles/dw/1024211.md)
 
