--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-24 [金砖国家峰会突显其地缘政治野心及与西方对抗的意愿](/articles/voa/1011568.md)
+
+10-24 [朝鲜派兵援俄？北京回应微妙，既未承认也未否认](/articles/voa/1011569.md)
+
 10-24 [印度尼西亚称两度将中国海警船驱离争议海域](/articles/voa/1011570.md)
 
 10-24 [中企禾赛再被列入黑名单 拟对美国国防部提诉讼](/articles/voa/1011571.md)
@@ -596,8 +600,4 @@
 10-12 [乌克兰总统访问德国与梵蒂冈](/articles/voa/1011866.md)
 
 10-12 [联合国警告说，不断扩大的中东冲突威胁数百万人健康](/articles/voa/1011867.md)
-
-10-12 [美两党议员要求电信公司汇报中国黑客入侵事件](/articles/voa/1011868.md)
-
-10-12 [美国总统大选愈加扑朔迷离，什么样的“十月惊奇”会搅局选情？](/articles/voa/1011869.md)
 
