--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-25 [萝严肃｜继续支持杨笠，支持女性脱口秀，做出我们的选择](/articles/cdt/336121.md)
+
+10-25 [风声OPINION｜杨笠事件：京东应该认怂吗？](/articles/cdt/336123.md)
+
 10-24 [那些原本是废话的常识｜逃到鹤岗的人无法改变命运，但逃离不是逃避，他们也并不懦弱](/articles/cdt/336126.md)
 
 10-24 [押沙龙yashl｜不说杨笠了，说说付航](/articles/cdt/336130.md)
@@ -596,8 +600,4 @@
 9-17 [常识流通处｜肃条与滋润：转移支付下的县城中产生活还能维持多久？](/articles/cdt/337057.md)
 
 9-17 [【404文库】白鹿新闻｜嫌疑人疑死亡后仍送医院抢救9天真相：停药后审讯发病，身上有明显伤痕](/articles/cdt/337060.md)
-
-9-17 [【404文库】法度Law｜“常济淙非正常死亡事件”最新进展：3位律师宣布公益代理](/articles/cdt/337062.md)
-
-9-17 [维权网｜徐凯律师：会见黄雪琴情况的通报——‘骨里有气’，心里有爱，眼里有光，穿上自由的衣裳](/articles/cdt/337063.md)
 
