--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-25 [关于朝鲜的军事力量，我们所知道的](/articles/nyt/1042277.md)
+
 10-25 [为什么从欧美飞往中国越来越难](/articles/nyt/1042278.md)
 
 10-25 [iPhone为何中国制造？](/articles/nyt/1042279.md)
@@ -598,6 +600,4 @@
 7-16 [特朗普遇刺引发对美国特勤局失职的质疑](/articles/nyt/1042575.md)
 
 7-16 [关于特朗普竞选搭档J·D·万斯，你需要了解的六件事](/articles/nyt/1042576.md)
-
-7-16 [中国将主办哈马斯和法塔赫高层会晤](/articles/nyt/1042577.md)
 
