--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-25 [为什么支持特朗普？钱就是硬道理](/articles/nyt/1042275.md)
+
 10-25 [朝鲜派兵援俄背后，普京为何选择“拥抱”朝鲜](/articles/nyt/1042276.md)
 
 10-25 [关于朝鲜的军事力量，我们所知道的](/articles/nyt/1042277.md)
@@ -598,6 +600,4 @@
 7-17 [中国进一步向台湾施压，两岸局势进入更危险时期](/articles/nyt/1042573.md)
 
 7-16 [特朗普为何选择昔日“反特先锋”万斯做竞选搭档](/articles/nyt/1042574.md)
-
-7-16 [特朗普遇刺引发对美国特勤局失职的质疑](/articles/nyt/1042575.md)
 
