--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-25 [台湾总统赖清德前线岛屿纪念“古宁头战役”75周年 称“外部力量”无法改变台湾的未来](/articles/voa/1011546.md)
+
+10-25 [在缅甸内战中，中国怎么支持摇摇欲坠的军政府？](/articles/voa/1011547.md)
+
 10-25 [阿尔巴尼斯驳斥北京指控澳大利亚充斥“种族歧视和仇恨犯罪](/articles/voa/1011548.md)
 
 10-25 [普京称美大选后的美俄关系取决于华盛顿](/articles/voa/1011549.md)
@@ -596,8 +600,4 @@
 10-13 [美国官员指称俄罗斯和中国阻挠东亚峰会声明的发表](/articles/voa/1011844.md)
 
 10-13 [金与正猛烈抨击韩国无人机 威胁“若再现将招致可怕灾难”](/articles/voa/1011845.md)
-
-10-13 [美国航空管理局批准 SpaceX “星舰5号”星期日飞行](/articles/voa/1011846.md)
-
-10-13 [以色列下令更多的黎巴嫩南部城镇居民撤离](/articles/voa/1011847.md)
 
