--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-25 [态度转变：米莱称中国是”非常有趣的贸易伙伴“](/articles/dw/1023896.md)
+
 10-25 [深陷危机：大众在华销量为何大幅下滑？](/articles/dw/1023897.md)
 
 10-25 [客座评论：Chindia 是否会再次到来？](/articles/dw/1023898.md)
@@ -598,6 +600,4 @@
 9-26 [批经济、批习？媒体报中国社科院专家朱恒鹏被调查](/articles/dw/1024194.md)
 
 9-26 [研究机构下调德国经济展望：从“微增”到“微减”](/articles/dw/1024195.md)
-
-9-26 [五角大楼：中国试射洲际导弹提前通知了美国](/articles/dw/1024196.md)
 
