--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-25 [习莫会后中印关系将怎样发展？](/articles/dw/1023894.md)
+
+10-25 [香港贫民区拆除改造 原住户五味杂陈](/articles/dw/1023895.md)
+
 10-25 [态度转变：米莱称中国是”非常有趣的贸易伙伴“](/articles/dw/1023896.md)
 
 10-25 [深陷危机：大众在华销量为何大幅下滑？](/articles/dw/1023897.md)
@@ -596,8 +600,4 @@
 9-27 [肯尼亚的机器人餐厅](/articles/dw/1024192.md)
 
 9-27 [立場新聞鍾沛權判入獄 美議員：香港已非昔日香港](/articles/dw/1024193.md)
-
-9-26 [批经济、批习？媒体报中国社科院专家朱恒鹏被调查](/articles/dw/1024194.md)
-
-9-26 [研究机构下调德国经济展望：从“微增”到“微减”](/articles/dw/1024195.md)
 
