--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-25 [欧盟与中国同意继续就电动汽车关税替代方案进行技术谈判](/articles/voa/1011543.md)
+
+10-25 [中印达成边界解决方案后，双方边防部队开始从两处争议地点后撤](/articles/voa/1011544.md)
+
 10-25 [中国良心犯许志永狱中绝食三周 健康急速恶化](/articles/voa/1011545.md)
 
 10-25 [台湾总统赖清德前线岛屿纪念“古宁头战役”75周年 称“外部力量”无法改变台湾的未来](/articles/voa/1011546.md)
@@ -596,8 +600,4 @@
 10-13 [勿忘时代英雄 追思高耀洁医师 纽约举办新书发表会](/articles/voa/1011841.md)
 
 10-13 [哈里斯公布“健康状况极佳”的报告 凸显医疗报告不透明的特朗普](/articles/voa/1011842.md)
-
-10-13 [冲突加剧之际 联合国官员呼吁保持黎巴嫩港口和机场运作](/articles/voa/1011843.md)
-
-10-13 [美国官员指称俄罗斯和中国阻挠东亚峰会声明的发表](/articles/voa/1011844.md)
 
