--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-25 [直击大选假信息：推广数字货币的账号在X上助力中国的虚假信息行动](/articles/voa/1011542.md)
+
 10-25 [欧盟与中国同意继续就电动汽车关税替代方案进行技术谈判](/articles/voa/1011543.md)
 
 10-25 [中印达成边界解决方案后，双方边防部队开始从两处争议地点后撤](/articles/voa/1011544.md)
@@ -598,6 +600,4 @@
 10-13 [澳门前终审法院院长岑浩辉以得票率98.99%当选澳门特首](/articles/voa/1011840.md)
 
 10-13 [勿忘时代英雄 追思高耀洁医师 纽约举办新书发表会](/articles/voa/1011841.md)
-
-10-13 [哈里斯公布“健康状况极佳”的报告 凸显医疗报告不透明的特朗普](/articles/voa/1011842.md)
 
