--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-26 [朝鲜寻求俄罗斯军事援助作为其部署军队到乌克兰的回报](/articles/voa/1011530.md)
+
+10-26 [布林肯敦促外交解决以色列和真主党冲突](/articles/voa/1011531.md)
+
+10-26 [乌克兰战争幽灵是否影响中俄推动全球改革？](/articles/voa/1011532.md)
+
 10-26 [中国法律学者许志永绝食三周状况危急 律师丁家喜被剥夺通讯权](/articles/voa/1011533.md)
 
 10-26 [经济低迷刺激“五失人员” 中国报复社会型暴力事件激增恐慌蔓延](/articles/voa/1011534.md)
@@ -594,10 +600,4 @@
 10-14 [美国将向以色列提供先进导弹防御系统](/articles/voa/1011828.md)
 
 10-14 [中国在台湾附近开始新一轮军演，未确定结束日期](/articles/voa/1011829.md)
-
-10-14 [为避欧盟关税，中国汽车制造商广汽集团考虑在欧洲生产电动汽车](/articles/voa/1011830.md)
-
-10-14 [拜登总统视察佛罗里达州米尔顿飓风灾情](/articles/voa/1011831.md)
-
-10-14 [乌克兰新闻界悼念在俄罗斯拘留期间死亡的乌克兰记者](/articles/voa/1011832.md)
 
