--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-26 [世界媒体看中国：印尼驱逐中国海警船](/articles/voa/1011528.md)
+
 10-26 [台湾宪法法庭宣判：总统立院国情报告、国会调查权、藐视国会罪等条文违宪](/articles/voa/1011529.md)
 
 10-26 [朝鲜寻求俄罗斯军事援助作为其部署军队到乌克兰的回报](/articles/voa/1011530.md)
@@ -598,6 +600,4 @@
 10-14 [台湾谴责中国围台军演并以“不升高冲突”应对 美日表达关切](/articles/voa/1011826.md)
 
 10-14 [特朗普在亚利桑那州承诺增加1万名边境巡逻人员](/articles/voa/1011827.md)
-
-10-14 [美国将向以色列提供先进导弹防御系统](/articles/voa/1011828.md)
 
