--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-26 [每日一语 2024.10.25](/articles/cdt/336080.md)
+
 10-26 [旧闻评论｜金星撞广州｜舆论手札](/articles/cdt/336082.md)
 
 10-26 [劳务宏观笔记｜回不去的故乡，三季度外出农民工首次超过1.9亿](/articles/cdt/336084.md)
@@ -598,6 +600,4 @@
 9-19 [昊轩洞见｜深圳日本人学校小学生遇袭，让我想到胡友平](/articles/cdt/337026.md)
 
 9-19 [常识流通处｜山东成武县一则“发展统计公报”火了：终于理解为何都往体制里钻](/articles/cdt/337028.md)
-
-9-18 [【404文库】独角鲸工作坊｜“日本小学生”遇袭，含糊其辞只能让事情变糟](/articles/cdt/337030.md)
 
