--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-26 [跨越台海的同婚之路：我們的關係非兩岸縮影](/articles/dw/1023890.md)
+
 10-25 [机会卡：德国的就业移民新政策初见成效](/articles/dw/1023891.md)
 
 10-25 [欧盟：对华电动汽车关税谈判仍有“重大分歧”](/articles/dw/1023892.md)
@@ -598,6 +600,4 @@
 9-27 [泰國賭博合法化在即？巨型賭場計劃浮現](/articles/dw/1024188.md)
 
 9-27 [石破茂将出任日本新首相](/articles/dw/1024189.md)
-
-9-27 [希望或失望：香港傘運十年後留下什麼記憶？](/articles/dw/1024190.md)
 
