--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-26 [【CDTV】【图说天朝】2023万圣节被诊断为新的错误记忆？](/articles/cdt/336066.md)
+
 10-26 [倪刃｜一个叫沙白的女孩儿决定去安乐死](/articles/cdt/336068.md)
 
 10-26 [【网络民议】知乎问答｜为什么恨国党觉得出去就能活得比中国更好呢？](/articles/cdt/336071.md)
@@ -598,6 +600,4 @@
 9-19 [【404文库】星球商业评论｜十岁男孩倒在蛇口街头](/articles/cdt/337015.md)
 
 9-19 [【404文库】深圳客｜想给那个日本孩子说声对不起！](/articles/cdt/337021.md)
-
-9-19 [每日一语 2024.9.18](/articles/cdt/337023.md)
 
