--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-26 [历史学家文安立：假如没有共产党 今日的中国会是什么模样？](/articles/voa/1011513.md)
+
 10-26 [以军轰炸伊朗实施大规模报复，美英呼吁双方克制，邻国表示关切和谴责](/articles/voa/1011514.md)
 
 10-26 [美国导弹机构缩减关岛防御计划 部署地点由22处缩为16处](/articles/voa/1011515.md)
@@ -598,6 +600,4 @@
 10-15 [中以外长通话，王毅敦促谨慎行事并实现加沙停火，卡茨表示期待中国表达平衡公正立场](/articles/voa/1011811.md)
 
 10-15 [巴基斯坦主持上合峰会 恐袭和抗议阴影下首都气氛空前紧张](/articles/voa/1011812.md)
-
-10-15 [中国经济唯一亮点变暗 九月份出口增长急剧放缓](/articles/voa/1011813.md)
 
