--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-5 [美国就朝鲜出兵乌克兰议题在联合国与俄罗斯对抗](/articles/voa/1011282.md)
+
+11-5 [中国给予塔利班政权零关税待遇](/articles/voa/1011283.md)
+
+11-5 [动物闻诊：蜜蜂和狗能比医疗设备更早检测出人类癌症吗？](/articles/voa/1011284.md)
+
 11-5 [特朗普在大选前对媒体发起法律挑战](/articles/voa/1011285.md)
 
 11-5 [印尼与俄罗斯开始创先例的联合海军演习](/articles/voa/1011286.md)
@@ -594,10 +600,4 @@
 10-24 [七国集团将以俄罗斯冻结资产援助乌克兰](/articles/voa/1011580.md)
 
 10-24 [台湾强化应对中国围岛作战能力](/articles/voa/1011581.md)
-
-10-24 [布林肯：在哈马斯领导人死亡后，有“真正的机会”达成释放人质的协议](/articles/voa/1011582.md)
-
-10-24 [中国的大型投资项目是津巴布韦的经济希望还是环境噩梦？](/articles/voa/1011583.md)
-
-10-24 [金砖登场，习普三会 分析：中俄合作大于竞争，但非“上不封顶”](/articles/voa/1011584.md)
 
