--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-5 [選前最後催票 川普和賀錦麗誰能拿下賓州？](/articles/dw/1023797.md)
+
 11-5 [35年前的东柏林：最大示威游行奏响东德挽歌](/articles/dw/1023798.md)
 
 11-4 [缅甸军政府领导人敏昂莱本周将访问中国](/articles/dw/1023799.md)
@@ -598,6 +600,4 @@
 10-6 [调查：德国三分之一人口愿意退休后继续工作](/articles/dw/1024095.md)
 
 10-6 [德海军上将：他们想表明 我们是不受欢迎的](/articles/dw/1024096.md)
-
-10-6 [马斯克首次为特朗普竞选公开站台](/articles/dw/1024097.md)
 
