--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+11-5 [美国人在不安、焦虑与恐惧中迎接大选](/articles/nyt/1042245.md)
+
 11-5 [房贷断供、止赎激增，中国楼市崩盘威胁金融系统](/articles/nyt/1042246.md)
 
 11-4 [从乌克兰到台海，美国大选对全世界有何影响](/articles/nyt/1042247.md)
@@ -598,6 +600,4 @@
 7-25 [“永不沉没”的巴黎：伟大的光影之城因奥运焕发新颜](/articles/nyt/1042543.md)
 
 7-25 [拜登退选后首次发表全国讲话：捍卫民主高于个人抱负](/articles/nyt/1042544.md)
-
-7-25 [拜登的自相矛盾：当外交政策与选举考量之间出现冲突](/articles/nyt/1042545.md)
 
