--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-5 [了解特朗普的关税政策](/articles/voa/1011278.md)
+
+11-5 [哈里斯的“机会经济”意味着什么？](/articles/voa/1011279.md)
+
 11-5 [台湾统促党成员涉收中资进行认知战被起诉 学者：证实传言助民众警觉](/articles/voa/1011280.md)
 
 11-5 [分析人士：朝鲜在对俄关系上冒险孤注一掷](/articles/voa/1011281.md)
@@ -596,8 +600,4 @@
 10-24 [南非要求台湾代表处迁离首都 美两党议员发声挺台，批南非与中国联手霸凌台湾](/articles/voa/1011576.md)
 
 10-24 [世界媒体看中国：谋求周边平和与不平和](/articles/voa/1011577.md)
-
-10-24 [对于西藏流亡领袖来说，走自治的中间道路仍然是核心重点](/articles/voa/1011578.md)
-
-10-24 [华为设备被发现含有台积电芯片 美国会议员要求解释](/articles/voa/1011579.md)
 
