--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-5 [大选前夕美当局警告俄罗斯加强虚假信息战](/articles/voa/1011276.md)
+
+11-5 [中国军方告诫年轻官兵不可参与网上约会与赌博](/articles/voa/1011277.md)
+
 11-5 [了解特朗普的关税政策](/articles/voa/1011278.md)
 
 11-5 [哈里斯的“机会经济”意味着什么？](/articles/voa/1011279.md)
@@ -596,8 +600,4 @@
 10-24 [朝鲜若派兵进入乌克兰意味着什么？联合国能做什么？](/articles/voa/1011574.md)
 
 10-24 [英国和德国签署防务协议 应对俄罗斯增长威胁](/articles/voa/1011575.md)
-
-10-24 [南非要求台湾代表处迁离首都 美两党议员发声挺台，批南非与中国联手霸凌台湾](/articles/voa/1011576.md)
-
-10-24 [世界媒体看中国：谋求周边平和与不平和](/articles/voa/1011577.md)
 
