--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-5 [旧闻评论｜事实核查在姜萍事件中如何遇阻？](/articles/cdt/335739.md)
+
 11-5 [每日一语 2024.11.4](/articles/cdt/335744.md)
 
 11-4 [劳务宏观笔记｜每天工作6小时23分？这数据能信吗？](/articles/cdt/335746.md)
@@ -598,6 +600,4 @@
 9-26 [四环青年｜博主为曝光民宿摄像头道歉，先搞清谁影响了城市形象](/articles/cdt/336797.md)
 
 9-26 [倪刃｜苏联：腐烂帝国的最后十年](/articles/cdt/336799.md)
-
-9-26 [常识流通处｜有感于俄罗斯将禁止宣传“无孩生活方式”](/articles/cdt/336801.md)
 
