--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-5 [美国大选当前 朝鲜连射七弹](/articles/dw/1023794.md)
+
 11-5 [特朗普和卡玛拉·哈里斯：选后两人各自会怎样出手应对中国？](/articles/dw/1023795.md)
 
 11-5 [消息人士：SpaceX要求台湾供应商将制造业务转移到海外](/articles/dw/1023796.md)
@@ -598,6 +600,4 @@
 10-7 [在中印之间回旋求援：马尔代夫总统访印度](/articles/dw/1024092.md)
 
 10-7 [賴清德「祖國說」消除台獨疑慮？學者：過度解讀](/articles/dw/1024093.md)
-
-10-6 [德国经济萎缩超预期 未来两年或迎复苏转机](/articles/dw/1024094.md)
 
