--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,18 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-6 [每日一语 2024.11.5](/articles/cdt/335717.md)
+
+11-6 [七叔东山再起｜只刺激不改革，解决不了问题](/articles/cdt/335719.md)
+
+11-6 [天涯行路｜劣币驱逐完良币，我们身边还剩下些什么币？](/articles/cdt/335721.md)
+
+11-6 [观人随笔｜你们把学校当什么了？](/articles/cdt/335723.md)
+
+11-6 [星球商业评论｜捕鱼也别用绝户网](/articles/cdt/335725.md)
+
+11-5 [【图说天朝】转发“大陆游客在台北市政府餐厅用餐”被禁言15天](/articles/cdt/335729.md)
+
 11-5 [六神磊磊读金庸｜挖掘真相是最赔本的买卖](/articles/cdt/335731.md)
 
 11-5 [四环青年｜学生不交医保就停课，谁在拿捏家长？](/articles/cdt/335736.md)
@@ -588,16 +600,4 @@
 9-28 [【404文库】嬉笑创客｜是什么推动了政策豹变？](/articles/cdt/336772.md)
 
 9-28 [每日一语 2024.9.26](/articles/cdt/336778.md)
-
-9-28 [小鸟与好奇心｜算法会让极权政权变得更强大吗](/articles/cdt/336782.md)
-
-9-28 [罗翔说刑法｜从爱新觉罗去哪了谈起](/articles/cdt/336783.md)
-
-9-27 [端传媒｜一个立场新闻记者的手记：苦厄让人看清，什么东西在闪闪发光（节选）](/articles/cdt/336786.md)
-
-9-27 [【立此存照】财新｜黑龙江一厅官被指“私自阅看含有破坏党的团结统一等内容的非法出版物”](/articles/cdt/336787.md)
-
-9-29 [【CDT报告汇】“我们再也不能秉笔直书”，国安法下香港学术自由大幅倒退（外二篇）](/articles/cdt/336788.md)
-
-9-27 [钱江说当代史｜我来谈谈卞仲耘有没有在土改中害人杀人——由宋彬彬去世引起的话题](/articles/cdt/336790.md)
 
