--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-6 [内塔尼亚胡解除以色列国防部长职务](/articles/voa/1011262.md)
+
 11-6 [日本希望美国总统大选结果不会改变美日同盟](/articles/voa/1011263.md)
 
 11-6 [欧中关税之战“争而不破”的秘密：北京不愿欧洲也变成美国](/articles/voa/1011264.md)
@@ -598,6 +600,4 @@
 10-25 [普京不否认朝鲜向俄罗斯派军队](/articles/voa/1011560.md)
 
 10-25 [立陶宛议会选举会导致对华关系改善吗？](/articles/voa/1011561.md)
-
-10-25 [印度太阳能公司从美国对华关税中获收渔翁之利](/articles/voa/1011562.md)
 
