--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-6 [对华语信息环境分析指中国操弄美大选涉台议题叙事](/articles/voa/1011251.md)
+
 11-6 [世卫组织：英国两例猴痘病例是欧洲首例本地传播](/articles/voa/1011252.md)
 
 11-6 [以色列各地民众抗议内塔尼亚胡解除国防部长职务](/articles/voa/1011253.md)
@@ -598,6 +600,4 @@
 10-25 [普京称美大选后的美俄关系取决于华盛顿](/articles/voa/1011549.md)
 
 10-25 [联合国报告：如果不采取更多行动 全球气温将升高摄氏3.1度](/articles/voa/1011550.md)
-
-10-25 [G7正在敲定向乌克兰提供的500亿美元贷款](/articles/voa/1011551.md)
 
