--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-6 [特朗普获胜 北京亦喜亦忧](/articles/dw/1023784.md)
+
 11-6 [协助打击犯罪、数据隐私新考验 AI能让治安更安全?](/articles/dw/1023785.md)
 
 11-6 [巴黎车展 中欧车企摆擂台](/articles/dw/1023786.md)
@@ -598,6 +600,4 @@
 10-7 [两位美国科学家获诺贝尔医学奖](/articles/dw/1024082.md)
 
 10-7 [德国军舰完成穿越南中国海](/articles/dw/1024083.md)
-
-10-7 [长平观察：绝食百日，郭飞雄不该孤单](/articles/dw/1024084.md)
 
