--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+11-6 [宝马第三季度净利润下降84%](/articles/dw/1023782.md)
+
+11-6 [客座评论：特朗普卷土重来 习近平要抓紧时间？](/articles/dw/1023783.md)
+
 11-6 [特朗普获胜 北京亦喜亦忧](/articles/dw/1023784.md)
 
 11-6 [协助打击犯罪、数据隐私新考验 AI能让治安更安全?](/articles/dw/1023785.md)
@@ -596,8 +600,4 @@
 10-8 [路透：中國解放軍擬在賴清德國慶演說後軍演](/articles/dw/1024080.md)
 
 10-7 [韩菲建立战略伙伴关系](/articles/dw/1024081.md)
-
-10-7 [两位美国科学家获诺贝尔医学奖](/articles/dw/1024082.md)
-
-10-7 [德国军舰完成穿越南中国海](/articles/dw/1024083.md)
 
