--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-6 [西班牙灾区民众向国王发泄怒火](/articles/dw/1023781.md)
+
 11-6 [宝马第三季度净利润下降84%](/articles/dw/1023782.md)
 
 11-6 [客座评论：特朗普卷土重来 习近平要抓紧时间？](/articles/dw/1023783.md)
@@ -598,6 +600,4 @@
 10-8 [长平观察：吴慷仁“不再是一个人”](/articles/dw/1024079.md)
 
 10-8 [路透：中國解放軍擬在賴清德國慶演說後軍演](/articles/dw/1024080.md)
-
-10-7 [韩菲建立战略伙伴关系](/articles/dw/1024081.md)
 
