--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+11-16 [拜登会晤韩日领导人 称赞三方合作 共同应对各种挑战](/articles/voa/1010995.md)
+
+11-16 [共和党议员对特朗普能够实现结束俄乌战争的目标抱持乐观](/articles/voa/1010996.md)
+
+11-16 [独立中文笔会授予女权活动人士李翘楚、独立记者黄雪琴“林昭纪念奖”](/articles/voa/1010997.md)
+
+11-16 [美日韩领导人三边峰会联合声明：反对南中国海非法海洋权利主张，呼吁和平解决台海两岸问题](/articles/voa/1010998.md)
+
+11-16 [美日韩领导人三边峰会联合声明：反对南中国海非法海洋权利主张，呼吁和平解决台海两岸问题](/articles/voa/1010999.md)
+
+11-16 [朔尔茨与普京直接通话，要求俄罗斯从乌克兰撤军；欧尔班呼吁欧盟放弃对俄制裁](/articles/voa/1011000.md)
+
 11-16 [伊朗高官访问贝鲁特，承诺支持黎巴嫩](/articles/voa/1011001.md)
 
 11-16 [美议员推出法案，要求取消中国的永久正常贸易关系地位](/articles/voa/1011002.md)
@@ -588,16 +600,4 @@
 11-5 [法国表示在中国加征白兰地关税问题上仍有谈判空间](/articles/voa/1011293.md)
 
 11-5 [韩国与欧盟同声强烈谴责朝鲜出兵援俄攻乌](/articles/voa/1011294.md)
-
-11-5 [摩尔多瓦亲欧总统桑杜获胜连任，俄罗斯干涉选举做法未能奏效](/articles/voa/1011295.md)
-
-11-5 [中国借“双航母南海军演”敲打美国？台湾专家：解放军战力尚难与美抗衡](/articles/voa/1011296.md)
-
-11-5 [选前最后一天！哈里斯和特朗普双双为创造历史而最后冲刺](/articles/voa/1011297.md)
-
-11-5 [中国多管齐下催生育，民众反感声音四起：生孩子真有好处，还用天天催吗？](/articles/voa/1011298.md)
-
-11-4 [在对华科技政策上，特朗普与哈里斯谁更可能对中国实施“卡脖子”战略?](/articles/voa/1011299.md)
-
-11-4 [中国政府就欧盟电动车反补贴终裁措施在世贸组织提起诉讼](/articles/voa/1011300.md)
 
