--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+11-16 [援俄朝鲜士兵家属忍受着恐惧和焦虑](/articles/voa/1010992.md)
+
+11-16 [与习近平会面前夕，拜登与台湾APEC代表林信义简短晤谈](/articles/voa/1010993.md)
+
+11-16 [拜登秘鲁三会习近平，即将回归的特朗普才是真正的焦点？](/articles/voa/1010994.md)
+
 11-16 [拜登会晤韩日领导人 称赞三方合作 共同应对各种挑战](/articles/voa/1010995.md)
 
 11-16 [共和党议员对特朗普能够实现结束俄乌战争的目标抱持乐观](/articles/voa/1010996.md)
@@ -594,10 +600,4 @@
 11-5 [大选前最后一天哈里斯和特朗普在宾州举行集会](/articles/voa/1011290.md)
 
 11-5 [巴基斯坦：边防军击毙几名试图从阿富汗越境的激进分子](/articles/voa/1011291.md)
-
-11-5 [《经济学人》前主编：谁当选美国总统都不会放弃台湾而向北京示弱](/articles/voa/1011292.md)
-
-11-5 [法国表示在中国加征白兰地关税问题上仍有谈判空间](/articles/voa/1011293.md)
-
-11-5 [韩国与欧盟同声强烈谴责朝鲜出兵援俄攻乌](/articles/voa/1011294.md)
 
