--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-16 [特朗普任命卡罗琳·莱维特为白宫史上最年轻新闻秘书](/articles/voa/1010989.md)
+
 11-16 [特朗普2.0：台湾会成为对华交易筹码？多数台湾人不愿交“保护费”换防卫](/articles/voa/1010990.md)
 
 11-16 [美国如何移交总统权力](/articles/voa/1010991.md)
@@ -598,6 +600,4 @@
 11-5 [菲律宾军队在南中国海开始夺岛演习](/articles/voa/1011287.md)
 
 11-5 [印度总理莫迪谴责加拿大印度教寺庙遭到“蓄意”攻击](/articles/voa/1011288.md)
-
-11-5 [中国民企在愈演愈烈的“远洋捕捞”式执法下沦为“唐僧肉”](/articles/voa/1011289.md)
 
