--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+11-16 [印度一医院火灾造成10名新生儿死亡](/articles/dw/1023683.md)
+
 11-16 [分别会见中国和美韩领导人  日本首相都谈了什么？](/articles/dw/1023684.md)
 
 11-16 [德国总理两年来首次与普京通话  乌总统：普京只想要喘息之机](/articles/dw/1023685.md)
@@ -598,6 +600,4 @@
 10-17 [台湾在印度孟买开设办事处 中国外交部提出严正交涉](/articles/dw/1023981.md)
 
 10-17 [台湾官员：此次中国军演构成了前所未有的威胁](/articles/dw/1023982.md)
-
-10-17 [中國再度發動環台軍演 台灣人怎麼看？](/articles/dw/1023983.md)
 
