--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-17 [台湾代表在APEC峰会邀拜登访台，美卸任总统访台不乏先例](/articles/voa/1010981.md)
+
 11-16 [俄乌战争1000天，七国集团重申挺乌挺到底要俄罗斯付出沉重代价](/articles/voa/1010982.md)
 
 11-16 [专访野夫：一场低调民主政治实验的夭折和地方维稳体制布局](/articles/voa/1010983.md)
@@ -598,6 +600,4 @@
 11-5 [哈里斯的“机会经济”意味着什么？](/articles/voa/1011279.md)
 
 11-5 [台湾统促党成员涉收中资进行认知战被起诉 学者：证实传言助民众警觉](/articles/voa/1011280.md)
-
-11-5 [分析人士：朝鲜在对俄关系上冒险孤注一掷](/articles/voa/1011281.md)
 
