--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 11-17 [【网络民议】江苏一职业技术学院发生持刀伤人案件：接二连三，如何破解？](/articles/cdt/335409.md)
 
+11-17 [建设性意见｜宜兴！宜兴！！](/articles/cdt/335411.md)
+
 11-17 [【404维修站】理想岛｜北大哲学教授吴飞：我从美国回来后，发现北大变得我不认得了](/articles/cdt/335413.md)
 
 11-16 [读宋史的赵大胖｜宿舍失火依然排队刷门禁逃生的大学生，会变成什么样子](/articles/cdt/335417.md)
@@ -598,6 +600,4 @@
 10-9 [入木三分谈｜别哭，给你注入正能量呢](/articles/cdt/336508.md)
 
 10-9 [书写者｜瑞士伤害儿童者的心理动机：阿Q不知道自己恨谁爱谁](/articles/cdt/336511.md)
-
-10-9 [衣者朝新｜将来“鞭尸”的好素材](/articles/cdt/336514.md)
 
