--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-17 [香港自由委员会主席郭明瀚：英方应要求高官与黎智英见面 结束单独囚禁](/articles/voa/1010979.md)
+
+11-17 [中国学校发生持刀攻击事件，导致8死17伤](/articles/voa/1010980.md)
+
 11-17 [台湾代表在APEC峰会邀拜登访台，美卸任总统访台不乏先例](/articles/voa/1010981.md)
 
 11-16 [俄乌战争1000天，七国集团重申挺乌挺到底要俄罗斯付出沉重代价](/articles/voa/1010982.md)
@@ -596,8 +600,4 @@
 11-5 [中国军方告诫年轻官兵不可参与网上约会与赌博](/articles/voa/1011277.md)
 
 11-5 [了解特朗普的关税政策](/articles/voa/1011278.md)
-
-11-5 [哈里斯的“机会经济”意味着什么？](/articles/voa/1011279.md)
-
-11-5 [台湾统促党成员涉收中资进行认知战被起诉 学者：证实传言助民众警觉](/articles/voa/1011280.md)
 
