--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-17 [“拜习会”秘鲁登场 习近平表示已准备好和美国新政府合作](/articles/voa/1010975.md)
+
 11-17 [拜登习近平重申管理美中竞争的重要性](/articles/voa/1010976.md)
 
 11-17 [日本外务大臣访问乌克兰，强调对朝鲜军队的共同担忧](/articles/voa/1010977.md)
@@ -598,6 +600,4 @@
 11-5 [美国大选观战指南：结果何时出？选后又如何？](/articles/voa/1011273.md)
 
 11-5 [哈里斯和特朗普竞争入主白宫，美国总统大选结果选民决定](/articles/voa/1011274.md)
-
-11-5 [摇摆州佐治亚的关键县提前计票](/articles/voa/1011275.md)
 
