--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-17 [【404文库】新新默存｜血案背后，20起报复社会事件的惊人相似性](/articles/cdt/335406.md)
+
 11-17 [【网络民议】江苏一职业技术学院发生持刀伤人案件：接二连三，如何破解？](/articles/cdt/335409.md)
 
 11-17 [建设性意见｜宜兴！宜兴！！](/articles/cdt/335411.md)
@@ -598,6 +600,4 @@
 10-9 [每日一语 2024.10.8](/articles/cdt/336504.md)
 
 10-9 [入木三分谈｜别哭，给你注入正能量呢](/articles/cdt/336508.md)
-
-10-9 [书写者｜瑞士伤害儿童者的心理动机：阿Q不知道自己恨谁爱谁](/articles/cdt/336511.md)
 
