--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+11-17 [每日一语 2024.11.16](/articles/cdt/335394.md)
+
+11-17 [成都客｜无处可逃，不如创造](/articles/cdt/335396.md)
+
 11-17 [【404文库】新新默存｜血案背后，20起报复社会事件的惊人相似性](/articles/cdt/335406.md)
 
 11-17 [【网络民议】江苏一职业技术学院发生持刀伤人案件：接二连三，如何破解？](/articles/cdt/335409.md)
@@ -596,8 +600,4 @@
 10-9 [三联生活周刊｜餐饮业进入寒冬，你还舍得去餐馆吃饭吗？](/articles/cdt/336498.md)
 
 10-9 [【CDT关注】赖清德：“75岁的中华人民共和国，不可能是中华民国的‘祖国’”](/articles/cdt/336500.md)
-
-10-9 [阜成门六号院｜即便是牛市来了，中小散户也很难赚到钱](/articles/cdt/336502.md)
-
-10-9 [每日一语 2024.10.8](/articles/cdt/336504.md)
 
