--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-18 [俄罗斯周日向乌克兰发动一个月来最大规模导弹和无人机袭击](/articles/voa/1010966.md)
+
 11-18 [外媒记者在华风险高 中国新闻“红线”激增 采访频遭打压](/articles/voa/1010967.md)
 
 11-18 [香港本周两起国安案庭审突显政治自由遭侵蚀有多严重](/articles/voa/1010968.md)
@@ -598,6 +600,4 @@
 11-6 [欧中关税之战“争而不破”的秘密：北京不愿欧洲也变成美国](/articles/voa/1011264.md)
 
 11-6 [菲律宾防长：在东南亚组建北约式军事安全集团目前不可能](/articles/voa/1011265.md)
-
-11-6 [美国选举对美欧中三边关系的影响](/articles/voa/1011266.md)
 
