--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-18 [以色列袭击贝鲁特打死真主党发言人](/articles/voa/1010964.md)
+
 11-18 [消息人士：拜登首次授权乌克兰使用美国提供的远程导弹攻击俄罗斯境内目标](/articles/voa/1010965.md)
 
 11-18 [俄罗斯周日向乌克兰发动一个月来最大规模导弹和无人机袭击](/articles/voa/1010966.md)
@@ -598,6 +600,4 @@
 11-6 [内塔尼亚胡解除以色列国防部长职务](/articles/voa/1011262.md)
 
 11-6 [日本希望美国总统大选结果不会改变美日同盟](/articles/voa/1011263.md)
-
-11-6 [欧中关税之战“争而不破”的秘密：北京不愿欧洲也变成美国](/articles/voa/1011264.md)
 
