--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+11-18 [美国拟增加伐木量，以帮助遏制美国太平洋西北部的野火](/articles/voa/1010959.md)
+
+11-18 [干旱状况持续，美国东北部大部分地区继续面临野火威胁](/articles/voa/1010960.md)
+
 11-18 [经过1000天的艰苦战争，俄罗斯进一步深入乌克兰](/articles/voa/1010961.md)
 
 11-18 [教宗方济各呼吁调查以色列对加沙的攻击是否构成“种族灭绝”](/articles/voa/1010962.md)
@@ -596,8 +600,4 @@
 11-6 [美大选前夕，中国总理李强“进博会”上大谈自由贸易](/articles/voa/1011257.md)
 
 11-6 [美国投票站遭到来自俄罗斯的炸弹威胁](/articles/voa/1011258.md)
-
-11-6 [百余伤员患者将从加沙撤离](/articles/voa/1011259.md)
-
-11-6 [中国黑客干预美国2024大选？美国选举安全面临新挑战](/articles/voa/1011260.md)
 
