--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-18 [两名特朗普内阁提名人卷入性丑闻](/articles/voa/1010958.md)
+
 11-18 [美国拟增加伐木量，以帮助遏制美国太平洋西北部的野火](/articles/voa/1010959.md)
 
 11-18 [干旱状况持续，美国东北部大部分地区继续面临野火威胁](/articles/voa/1010960.md)
@@ -598,6 +600,4 @@
 11-6 [报告说，俄罗斯就石油销售欺骗欧佩克，以资助乌克兰战争](/articles/voa/1011256.md)
 
 11-6 [美大选前夕，中国总理李强“进博会”上大谈自由贸易](/articles/voa/1011257.md)
-
-11-6 [美国投票站遭到来自俄罗斯的炸弹威胁](/articles/voa/1011258.md)
 
