--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+11-18 [新奥尔良游行庆典期间发生枪击案 2死10伤](/articles/voa/1010956.md)
+
 11-18 [22岁女子曝光非法代孕经历 在中国社媒引发热议](/articles/voa/1010957.md)
 
 11-18 [两名特朗普内阁提名人卷入性丑闻](/articles/voa/1010958.md)
@@ -598,6 +600,4 @@
 11-6 [在美国大选日当天，约三千移民向美国进发](/articles/voa/1011254.md)
 
 11-6 [泽伦斯基:乌克兰军队已与朝鲜军人接战](/articles/voa/1011255.md)
-
-11-6 [报告说，俄罗斯就石油销售欺骗欧佩克，以资助乌克兰战争](/articles/voa/1011256.md)
 
